<resources>
    <string name="app_name">Ready to Ride</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ready to Ride</string>
    <string name="nav_header_desc">Navigation</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Startseite</string>
    <string name="menu_stable">Stall</string>
    <string name="menu_horses">Pferde</string>
    <string name="menu_trainer">Trainer</string>
    <string name="menu_lessons">Reitstunden buchen</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_contact">Kontakt</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Registrieren</string>
    <string name="book_lesson">Jetzt Reitstunde buchen</string>
    <string name="horse_details">Mehr erfahren</string>
    <string name="horsename1">Steve</string>
    <string name="horsename2">Polly</string>
    <string name="horsename3">Gin</string>
    <string name="horsename4">Tonic</string>
    <string name="horsename5">Flummi</string>
    <string name="horsename6">Ludwig</string>
    <string name="horsename7">Nougat</string>
    <string name="horsename8">Gollum</string>
    <string name="horsename9">Scarlet</string>
    <string name="horsename10">Calypso</string>
    <string name="horseheight1">142 cm</string>
    <string name="horseheight2">147 cm</string>
    <string name="horseheight3">163 cm</string>
    <string name="horseheight4">166 cm</string>
    <string name="horseheight5">141 cm</string>
    <string name="horseheight6">158 cm</string>
    <string name="horseheight7">154 cm</string>
    <string name="horseheight8">167 cm</string>
    <string name="horseheight9">150 cm</string>
    <string name="horseheight10">170 cm</string>
    <string name="trainername1">Susanne Martin</string>
    <string name="trainername2">Tina Martin</string>
    <string name="trainername3">Alexander von Falkenstein</string>
    <string name="trainername4">Sophia von Gelenberg</string>
    <string name="trainername5">Bibi Blocksberg</string>
    <string name="qualification1">Trainer A Westernreiten Leistungssport</string>
    <string name="qualification2">Trainer C Westernreiten Leistungssport</string>
    <string name="qualification3">Trainerassistent im Westernreitsport</string>
    <string name="qualification4">Trainer B Westernreiten Leistungssport</string>
    <string name="qualification5">Pferdewirtschaftsmeister Spezialreitweisen Westernreiten</string>
    <string name="race1">Quaterhorse</string>
    <string name="race2">Deutsches Reitpony</string>
    <string name="race3">Friesenpferde</string>
    <string name="race4">Haflinger</string>
    <string name="race5">Hannoveraner</string>
    <string name="race6">Holsteiner Pferd</string>
    <string name="race7">Islandpferd</string>
    <string name="race8">Oldenburger</string>
    <string name="race9">Pura Raza Espanola</string>
    <string name="age1">7 Jahre</string>
    <string name="age2">12 Jahre</string>
    <string name="age3">14 Jahre</string>
    <string name="age4">9 Jahre</string>
    <string name="age5">17 Jahre</string>
    <string name="age6">10 Jahre</string>
    <string name="age7">8 Jahre</string>
    <string name="age8">11 Jahre</string>
    <string name="age9">19 Jahre</string>
    <string name="age10">27 Jahre</string>
    <string name="age11">51 Jahre</string>
    <string name="age12">36 Jahre</string>
    <string name="age13">32 Jahre</string>
    <string name="colour1">Red Roan</string>
    <string name="colour2">Blue Roan</string>
    <string name="colour3">Rappe</string>
    <string name="colour4">Fuchs</string>
    <string name="colour5">Palomino</string>
    <string name="colour6">Braun</string>
    <string name="colour7">Schimmel</string>
    <string name="colour8">Schecke</string>
    <string name="difficulty1">Anfänger</string>
    <string name="difficulty2">Amateur</string>
    <string name="difficulty3">Fortgeschritten</string>
    <string name="difficulty4">Profi</string>
    <string name="description1">Dieses Pferd liebt Ausreiten fast so sehr wie Essen.</string>
    <string name="description2">Dieses Pferd mag Pommes und Möhren. Man kann es sehr gut reiten.</string>
    <string name="description3">Dieses Pferd ist sehr gemütlich und bewegt sich nur, wenn es  unbedingt muss.</string>
    <string name="description4">Dieses Pferd hat bereits in Bibi und Tina mitgespielt.</string>
    <string name="description5">Dieses Pferd kann sehr einfach mit Äpfeln bestochen werden.</string>
    <string name="description6">Das ist ein toller Trainer. Er ist sehr kompetent.</string>
    <string name="description7">Dieser Trainer ist noch besser. Er hat sehr viel Erfahrung.</string>
    <string name="description8">Dieser Trainer liebt Ausritte und Pferde streicheln.</string>
    <string name="description9">Mit diesem Trainer kann man sehr viel Spaß haben.</string>
    <string name="description10">Dieser Trainer kann dir ganz viel cooles Zeug beibringen.</string>
    <string name="id1">1</string>
    <string name="id2">2</string>
    <string name="id3">3</string>
    <string name="id4">4</string>
    <string name="id5">5</string>
    <string name="id6">6</string>
    <string name="id7">7</string>
    <string name="id8">8</string>
    <string name="id9">9</string>
    <string name="id10">10</string>
    <string name="focus1">Kinder</string>
    <string name="focus2">Erwachsene</string>
    <string name="focus3">Turnierreiter</string>
    <string name="focus4">Anfänger</string>
    <string name="focus5">Fortgeschrittene</string>
    <string name="achievements">Erfolge</string>
    <string name="date1">25.04.2019</string>
    <string name="date2">21.07.2018</string>
    <string name="date3">03.05.2016</string>
    <string name="date4">28.02.2016</string>
    <string name="date5">13.08.2014</string>
    <string name="achievement1">Deutscher Meister Senior Reining</string>
    <string name="achievement2">Deutscher Meister Senior Trail</string>
    <string name="achievement3">Deutscher Meister Senior Horsemanship</string>
    <string name="achievement4">Deutscher Meister Senior Showmanship</string>
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_password">Passwort</string>
    <string name="invalid_username">Kein gültiger Nutzername</string>
    <string name="login_failed">"Login fehlgeschlagen"</string>
    <string-array name="roles">
        <item>Nutzer</item>
        <item>Admin</item>
        <item>Trainer</item>
    </string-array>
    <string name="rb1">Kinder</string>
    <string name="rb2">Erwachsene</string>
    <string name="rb3">Tunierreiter</string>
    <string name="rb4">Anfänger</string>
    <string name="rb5">Fortgeschrittene</string>
    <string name="focus">Fokus auf:</string>
    <string name="erfahrung">Erfahrung:</string>
    <string name="rb_user1">Tunierreiter</string>
    <string name="contact_header">Impressum</string>
    <string name="contact_header2">Kontakt</string>
    <string name="contact_adress">Am Reitplatz 1\n68175 Mannheim</string>
    <string name="contact_name">Montag bis Freitag: 8:00 - 16:00 Uhr\nSamstag: 9:00 - 14:00 Uhr</string>
    <string name="contact_message">0621/895641</string>
    <string name="contact_mail">reiter-info@ready-to-ride.tk</string>
    <string name="contact_impressum">
Angaben gem. § 5 TMG:\n\nHaftungsausschluss – Disclaimer:\nHaftung für Inhalte\nAlle Inhalte unseres Internetauftritts wurden mit größter Sorgfalt und nach bestem Gewissen erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt.
Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntniserlangung einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von den o.g. Rechtsverletzungen werden wir diese Inhalte unverzüglich entfernen.
Haftungsbeschränkung für externe Links\nUnsere Webseite enthält Links auf externe Webseiten Dritter. Auf die Inhalte dieser direkt oder indirekt verlinkten Webseiten haben wir keinen Einfluss. Daher können wir für die „externen Links“ auch keine Gewähr auf Richtigkeit der Inhalte übernehmen. Für die Inhalte der externen Links sind die jeweilige Anbieter oder Betreiber (Urheber) der Seiten verantwortlich.
Die externen Links wurden zum Zeitpunkt der Linksetzung auf eventuelle Rechtsverstöße überprüft und waren im Zeitpunkt der Linksetzung frei von rechtswidrigen Inhalten. Eine ständige inhaltliche Überprüfung der externen Links ist ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht möglich. Bei direkten oder indirekten Verlinkungen auf die Webseiten Dritter, die außerhalb unseres Verantwortungsbereichs liegen, würde eine Haftungsverpflichtung ausschließlich in dem Fall nur bestehen, wenn wir von den Inhalten Kenntnis erlangen und es uns technisch möglich und zumutbar wäre, die Nutzung im Falle rechtswidriger Inhalte zu verhindern.
Diese Haftungsausschlusserklärung gilt auch innerhalb des eigenen Internetauftrittes „Name Ihrer Domain“ gesetzten Links und Verweise von Fragestellern, Blogeinträgern, Gästen des Diskussionsforums. Für illegale, fehlerhafte oder unvollständige Inhalte und insbesondere für Schäden, die aus der Nutzung oder Nichtnutzung solcherart dargestellten Informationen entstehen, haftet allein der Diensteanbieter der Seite, auf welche verwiesen wurde, nicht derjenige, der über Links auf die jeweilige Veröffentlichung lediglich verweist.
Werden uns Rechtsverletzungen bekannt, werden die externen Links durch uns unverzüglich entfernt.\n
Urheberrecht\nDie auf unserer Webseite veröffentlichen Inhalte und Werke unterliegen dem deutschen Urheberrecht (http://www.gesetze-im-internet.de/bundesrecht/urhg/gesamt.pdf) . Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung des geistigen Eigentums in ideeller und materieller Sicht des Urhebers außerhalb der Grenzen des Urheberrechtes bedürfen der vorherigen schriftlichen Zustimmung des jeweiligen Urhebers i.S.d. Urhebergesetzes (http://www.gesetze-im-internet.de/bundesrecht/urhg/gesamt.pdf ). Downloads und Kopien dieser Seite sind nur für den privaten und nicht kommerziellen Gebrauch erlaubt. Sind die Inhalte auf unserer Webseite nicht von uns erstellt wurden, sind die Urheberrechte Dritter zu beachten. Die Inhalte Dritter werden als solche kenntlich gemacht. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte unverzüglich entfernen.</string>
    <string name="booking_info">Ich erkläre mich damit einverstanden, dass meine persönlichen Daten an den ausgewählten Trainer weitergegeben werden.</string>
    <string name="success_message">Deine gewählte Reitstunde wurde erfolgreich reserviert. Sie kann in deinem Profil eingesehen werden. Sobald der Trainer die Anfrage bestätigt oder abgelehnt hat, erhältst du eine Nachricht.</string>
    <string name="alert_no_user">Reitstunden buchen ist nur möglich, wenn du mit einem Benutzerkonto angemeldet bist.</string>
    <string name="email">E-Mail:</string>
    <string name="phone_number">Telefonnummer:</string>
    <string name="availability">Erreichbarkeit:</string>
    <string name="size">Größe:</string>
    <string name="price">Preis:</string>
    <string name="number">Anzahl:</string>
</resources>