<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="8dp">

        <TextView
            android:id="@+id/header_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_header2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            tools:text="Kontakt" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/availability"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/labelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingBottom="8dp"
            android:text="@string/contact_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingBottom="8dp"
            android:text="@string/contact_mail"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/labelMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingBottom="8dp"
            android:text="@string/contact_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adresse:"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/labelMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/contact_adress"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/header_impressum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/contact_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hyphenationFrequency="normal"
                android:text="@string/contact_impressum" />
        </ScrollView>


    </LinearLayout>

</FrameLayout>
