<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_500"
        android:elevation="10dp"
        android:paddingVertical="4dp"
        android:paddingLeft="4dp"
        android:text="@string/book_lesson"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/layout_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        android:text="@string/booking_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <LinearLayout
        android:id="@+id/layout_success_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            app:srcCompat="@drawable/ic_baseline_check_circle_outline_24" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:paddingLeft="6dp"
            android:text="@string/success_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_fail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:tint="@color/orange_500"
            app:srcCompat="@drawable/ic_baseline_warning_amber_24" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_no_user"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/booking_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange_500"
            android:text="buchen" />
    </LinearLayout>

</LinearLayout>